# miniparser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yml  docker-compose.example.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: container.yml
app/: __init__.py  adapters.py  cache.py  config.py  main.py  models.py
tests/: test_adapters.py  test_auth_and_api.py  test_cache.py
