[project]
name = "miniparser"
version = "0.1.0"
description = "Lightweight homelab service aggregator for ESP32 desk displays"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "PyYAML>=6,<7",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
